Make kbps optional when computing effective connection type

Make kbps optional when computing effective connection type since
the kbps is always available.

This change only affects GetRecentEffectiveConnectionType(), and not
GetEffectiveConnectionType(). The former is used only for recording
accuracy.

BUG=696616
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_cronet_tester

Review-Url: https://codereview.chromium.org/2717883002
Cr-Commit-Position: refs/heads/master@{#453394}

Former-commit-id: 73f1a3b3440892c277003ef73862420592b93ab6